log
Wed 24 Apr 2024 11:08:35 PM UTC: 
 tests:  0|6
total_score: 0/70
77fc718
Wed 24 Apr 2024 11:09:36 PM UTC: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
a11f386
Wed 24 Apr 2024 11:12:35 PM UTC: 
 hashmap.c | 63 ++++++++++++++++++++++++++++++++-------------------------------
 1 file changed, 32 insertions(+), 31 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:15: error: ‘Pair’ has no member named ‘next’
   56 |     while (aux->next != NULL) {
      |               ^~
hashmap.c:57:16: error: ‘Pair’ has no member named ‘next’
   57 |       aux = aux->next;
      |                ^~
hashmap.c:59:8: error: ‘Pair’ has no member named ‘next’
   59 |     aux->next = par;
      |        ^~
Compilation failed
8e8483d
Wed 24 Apr 2024 11:13:27 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:15: error: ‘Pair’ has no member named ‘nextMap’
   56 |     while (aux->nextMap != NULL) {
      |               ^~
hashmap.c:57:16: error: ‘Pair’ has no member named ‘nextMap’
   57 |       aux = aux->nextMap;
      |                ^~
hashmap.c:59:8: error: ‘Pair’ has no member named ‘nextMap’
   59 |     aux->nextMap = par;
      |        ^~
Compilation failed
b58bf5c
